--- a/Muebles/templates/home.html
+++ b/Muebles/templates/home.html
@@ -3,9 +3,27 @@
 {% block title %} <title>Home</title> {% endblock %}
 
 {% block nav %} 
-<nav>
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'mostrarP' %}">Mostrar Productos</a>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{% url 'home' %}">
+        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-door" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M7.646 1.146a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5H9.5a.5.5 0 0 1-.5-.5v-4H7v4a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6zM2.5 7.707V14H6v-4a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v4h3.5V7.707L8 2.207l-5.5 5.5z"/>
+            <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+        </svg>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link {% if Pestado %} active {% endif %}" href="{% url 'mostrarP' %}">Productos<span class="sr-only">{% if Pestado %} (current) {% endif %}</span></a>
+            </li>
+        <li class="nav-item">
+            <a class="nav-link {% if Cestado %} active {% endif %}" href="{% url 'Clientes:mostrarC' %}">Clientes<span class="sr-only">{% if Pestado %} (current) {% endif %}</span></a>
+        </li>
+        </ul>
+    </div>
 </nav>
 {% endblock %}
 
