--- a/Muebles/templates/CRUD/create_form.html
+++ b/Muebles/templates/CRUD/create_form.html
@@ -1,17 +1,17 @@
-<form method="post" action="{% url 'Clientes:editarC' form.instance.pk %}" class="js-client-update-form">
+<form method="post" action="{% url path 'cargar' %}" class="js-create-form">
     {% csrf_token %}
     <div class="modal-header">
-        <h4 class="modal-title">Modificar Cliente - #{{form.instance.pk}} {{form.instance.first_name}}</h4>
+        <h4 class="modal-title">Crear Cliente</h4>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
       
     </div>
     <div class="modal-body">
-      {% include "Clientes/formCliente.html" %}
+      {% include "CRUD/form.html" %}
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      <button type="submit" class="btn btn-primary">Guardar</button>
+      <button type="submit" class="btn btn-primary">Agregar</button>
     </div>
   </form>
