--- a/Muebles/templates/CRUD/crudbase.html
+++ b/Muebles/templates/CRUD/crudbase.html
@@ -1,17 +1,16 @@
 {% extends "home.html" %}
-{% load static %}
-{% block title %} <title>Clientes</title> {% endblock %}
+{% block title %} <title>CRUD</title> {% endblock %}
 {% block content %}
 <div class="card text-center">
     <div class="card-header">
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <h1 style="float: right;" class="page-header-inline">Clientes</h1>
+                    <h1 style="float: right;" class="page-header-inline">{% block header %}{% endblock %}</h1>
                 </div>
                 <div class="col">                    
-                    <button style="float: left;" type="button" class="btn btn-dark js-create-client"
-                        data-url="{% url 'Clientes:cargarC' %}">
+                    <button style="float: left;" type="button" class="btn btn-dark js-create"
+                        data-url="{% url path 'cargar' %}">
                         <svg width="2em" height="2em" viewBox="0 0 16 16" class="bi bi-person-plus" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" d="M8 5a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm6 5c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10zM13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
                         </svg>
@@ -19,19 +18,28 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <input class="form-control w-100 js-search-client" type="search" placeholder="Buscar" name="buscar" aria-label="Buscar">
+                <div class="col" id="search-col">
+                    {% include "CRUD/search_form.html" %}
                 </div>                
             </div>
         </div>        
     </div>
     <div class="card-body">
-{% block table %}
-
-
-  
-{% endblock %}
-<div class="modal fade" id="modal-client">
+        <table class="table" id="table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>Telefono</th>
+                <th>Direccion</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% include "CRUD/list.html" %} 
+            </tbody>
+          </table>
+<div class="modal fade" id="modal">
     <div class="modal-dialog">
       <div class="modal-content">
       </div>
@@ -41,6 +49,3 @@
 </div>
 {% endblock %}
 
-{% block js %}
-<script src="{% static 'js/cliente.js' %}"></script>
-{% endblock %}
