--- a/Muebles/templates/CRUD/delete_form.html
+++ b/Muebles/templates/CRUD/delete_form.html
@@ -1,4 +1,4 @@
-<form method="post" action="{% url 'Clientes:borrarC' client.pk %}" class="js-client-delete-form">
+<form method="post" action="{% url path2 objeto.pk 'borrar' %}" class="js-delete-form">
     {% csrf_token %}
     <div class="modal-header">
         <h4 class="modal-title">Borrar Cliente</h4>
@@ -8,7 +8,7 @@
       
     </div>
     <div class="modal-body">
-      <h3>Esta seguro que desea eliminar #{{client.id}} {{client.first_name}} ?</h3>
+      <h3>Esta seguro que desea eliminar #{{objeto.id}} {{objeto.first_name}} ?</h3>
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
